--- a/personal/config.org
+++ b/personal/config.org
@@ -266,8 +266,18 @@ Add ~graphql-mode~
 An Http client for org mode
 
 #+begin_src emacs-lisp
+  (use-package verb)
+
   (use-package org
-    :mode ("\\.org\\'" . org-mode))
+    :mode ("\\.org\\'" . org-mode)
+    :config (define-key org-mode-map (kbd "C-c C-r") verb-command-map)
+    )
+#+end_src
+
+**** Import Postman
+
+#+begin_src emacs-lisp
+  (use-package impostman)
 #+end_src
 
 **** Simple Httpd
