--- a/personal/config.org
+++ b/personal/config.org
@@ -11,12 +11,14 @@ Contains the custom configuration for Prelude after proloading
 
 1. use-package ensure t
 2. abbrev mode always on and load personal abbrevs globally
+3. hs-minor-mode in prog modes
 
 #+begin_src emacs-lisp
   (setq use-package-always-ensure t)
   (setq-default abbrev-mode t)
   ;; Load personal abbrev table and make it available in all buffers
   (load-file (expand-file-name "personal/abbrev_defs" user-emacs-directory))
+  (add-hook 'prog-mode-hook #'hs-minor-mode)
 #+end_src
 
 ** Disable
